--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@types/cypress-cucumber-preprocessor": "^4.0.1",
     "cypress": "^9.0.0",
     "cypress-cucumber-preprocessor": "^4.3.0",
-    "faker": "^5.5.3"
+    "faker": "^5.5.3",
+    "mochawesome": "^6.2.2",
+    "mochawesome-merge": "^4.2.0",
+    "mochawesome-report-generator": "^5.2.0",
   },
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": true
