--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "faker": "^5.5.3",
     "mochawesome": "^6.2.2",
     "mochawesome-merge": "^4.2.0",
-    "mochawesome-report-generator": "^5.2.0",
+    "mochawesome-report-generator": "^5.2.0"
   },
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": true
